--- a/Industrial_computer_mid_70/.vscode/settings.json
+++ b/Industrial_computer_mid_70/.vscode/settings.json
@@ -12,5 +12,8 @@
         "/home/lx/campus_patrol_robot/Industrial_computer_mid_70/install/livox_interfaces/local/lib/python3.10/dist-packages",
         "/opt/ros/humble/lib/python3.10/site-packages",
         "/opt/ros/humble/local/lib/python3.10/dist-packages"
-    ]
+    ],
+    "files.associations": {
+        "functional": "cpp"
+    }
 }
